Seccion Tabs completado

--- a/elements.html
+++ b/elements.html
@@ -341,6 +341,70 @@
           </p>
         </div>
       </section>
+
+      <!-- Tabs -->
+      <section>
+        <p class="subtitle">Tabs</p>
+
+        <ul class="list__tabs">
+          <li class="item">Default</li>
+          <li class="item item--hover">Hover</li>
+          <li class="item item--active">Active</li>
+        </ul>
+
+        <div class="editor">
+          <p class="code--green">&lt!-- Tabs --></p>
+          <p> 
+            <span class="code--blue">&ltul</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"list__tabs"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p class="code--green">&nbsp&nbsp&nbsp&nbsp&lt!-- Default --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item"</span>
+            <span class="code--blue">></span>
+            <span>Default</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&nbsp&nbsp&lt!-- Hover --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item item--hover"</span>
+            <span class="code--blue">></span>
+            <span>Hover</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&nbsp&nbsp&lt!-- Active --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item item--active"</span>
+            <span class="code--blue">></span>
+            <span>Active</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/div></span> 
+          </p>
+        </div>
+      </section>
+
+      <!-- List Items -->
+      <section>
+        <p class="subtitle">List Items</p>
+
+        <ul class="list">
+          <li class="item">List Item</li>
+          <li class="item item--hover">List Item Hover</li>
+          <li class="item item--active">List Item Active</li>
+        </ul>
+      </section>
     </section>
 
   </main>
