Terminando la pagina blocks

--- a/elements.html
+++ b/elements.html
@@ -50,13 +50,13 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltimg</span>
+            <span class="code--blue">&nbsp&nbsp&ltimg</span>
             <span class="code--red">src=</span> 
             <span class="code--orange">"./img/icons/dark-download-icon.png"</span>
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span class="code--blue">&nbsp&nbsp&ltspan></span>
             <span>Base Button</span>
             <span class="code--blue">&lt/span></span>
           </p>
@@ -176,7 +176,7 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltimg</span>
+            <span class="code--blue">&nbsp&nbsp&ltimg</span>
             <span class="code--red">src=</span>
             <span class="code--orange">"./img/icons/white-download-icon.png"</span>
             <span class="code--red">alt=</span>
@@ -184,7 +184,7 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span class="code--blue">&nbsp&nbsp&ltspan></span>
             <span>With Icon</span>
             <span class="code--blue">&lt/span></span>
           </p>
@@ -200,7 +200,7 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltimg</span>
+            <span class="code--blue">&nbsp&nbsp&ltimg</span>
             <span class="code--red">src=</span>
             <span class="code--orange">"./img/icons/white-download-icon.png"</span>
             <span class="code--red">alt=</span>
@@ -284,7 +284,7 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span class="code--blue">&nbsp&nbsp&ltspan></span>
             <span>100x100</span>
             <span class="code--blue">&lt/span></span>
           </p>
@@ -300,7 +300,7 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span class="code--blue">&nbsp&nbsp&ltspan></span>
             <span>100x100</span>
             <span class="code--blue">&lt/span></span>
           </p>
@@ -316,7 +316,7 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span class="code--blue">&nbsp&nbsp&ltspan></span>
             <span>100x100</span>
             <span class="code--blue">&lt/span></span>
           </p>
@@ -332,7 +332,7 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltspan></span>
+            <span class="code--blue">&nbsp&nbsp&ltspan></span>
             <span>100x100</span>
             <span class="code--blue">&lt/span></span>
           </p>
@@ -360,9 +360,9 @@
             <span class="code--orange">"list__tabs"</span>
             <span class="code--blue">></span>
           </p>
-          <p class="code--green">&nbsp&nbsp&nbsp&nbsp&lt!-- Default --></p>
+          <p class="code--green">&nbsp&nbsp&lt!-- Default --></p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltli</span>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
             <span class="code--red">class=</span>
             <span class="code--orange">"item"</span>
             <span class="code--blue">></span>
@@ -370,9 +370,9 @@
             <span class="code--blue">&lt/li></span>
           </p>
           <br>
-          <p class="code--green">&nbsp&nbsp&nbsp&nbsp&lt!-- Hover --></p>
+          <p class="code--green">&nbsp&nbsp&lt!-- Hover --></p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltli</span>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
             <span class="code--red">class=</span>
             <span class="code--orange">"item item--hover"</span>
             <span class="code--blue">></span>
@@ -380,9 +380,9 @@
             <span class="code--blue">&lt/li></span>
           </p>
           <br>
-          <p class="code--green">&nbsp&nbsp&nbsp&nbsp&lt!-- Active --></p>
+          <p class="code--green">&nbsp&nbsp&lt!-- Active --></p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltli</span>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
             <span class="code--red">class=</span>
             <span class="code--orange">"item item--active"</span>
             <span class="code--blue">></span>
@@ -390,7 +390,7 @@
             <span class="code--blue">&lt/li></span>
           </p>
           <p>
-            <span class="code--blue">&lt/div></span> 
+            <span class="code--blue">&lt/ul></span> 
           </p>
         </div>
       </section>
@@ -404,6 +404,48 @@
           <li class="item item--hover">List Item Hover</li>
           <li class="item item--active">List Item Active</li>
         </ul>
+
+        <div class="editor">
+          <p class="code--green">&lt!-- List Items --></p>
+          <p> 
+            <span class="code--blue">&ltul</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"list"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p class="code--green">&nbsp&nbsp&lt!-- Default --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item"</span>
+            <span class="code--blue">></span>
+            <span>List Item</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&lt!-- Hover --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item item--hover"</span>
+            <span class="code--blue">></span>
+            <span>List Item Hover</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&lt!-- Active --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item item--active"</span>
+            <span class="code--blue">></span>
+            <span>List Item Active</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/ul></span> 
+          </p>
+        </div>
       </section>
     </section>
 
