--- a/blocks.html
+++ b/blocks.html
@@ -56,13 +56,13 @@
             <span class="code--blue">></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltdiv</span>  
+            <span class="code--blue">&nbsp&nbsp&ltdiv</span>  
             <span class="code--red">class=</span>  
             <span class="code--orange">"banner__hero"</span>  
             <span class="code--blue">></span>  
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&ltp</span>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltp</span>
             <span class="code--red">class=</span> 
             <span class="code--orange">"banner__title"</span> 
             <span class="code--blue">></span>
@@ -70,22 +70,212 @@
             <span class="code--blue">&lt/p></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&ltp</span>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltp</span>
             <span class="code--red">class=</span> 
             <span class="code--orange">"banner__subtitle"</span> 
             <span class="code--blue">></span>
-            <span>Become a better version of yourself in only 6 months.</span>
-            <span class="code--blue">&lt/p></span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&lt/div></span>
+            <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspBecome a better version of yourself in only 6 months.</span>
           </p>
           <p>
-            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltbutton</span>  
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&lt/p></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&lt/div></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltbutton</span>  
             <span class="code--red">class=</span>  
             <span class="code--orange">"button button--success"</span>
             <span class="code--blue">></span>  
             <span>Apply now</span>
+            <span class="code--blue">&lt/button></span>  
+          </p>
+          <p>
+            <span class="code--blue">&lt/section></span> 
+          </p>
+        </div>
+      </section>
+
+      <!-- Tab Group -->
+      <section>
+        <p class="subtitle">Tab Group</p>
+
+        <ul class="list__tab-group">
+          <li class="item">Tab</li>
+          <li class="item">Tab</li>
+          <li class="item item--active">Active Tab</li>
+          <li class="item">Tab</li>
+          <li class="item">Tab</li>
+        </ul>
+
+        <div class="editor">
+          <p class="code--green">&lt!-- Tab Group --></p>
+          <p> 
+            <span class="code--blue">&ltul</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"list__tab-group"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p class="code--green">&nbsp&nbsp&lt!-- Default --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item"</span>
+            <span class="code--blue">></span>
+            <span>Tab</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&lt!-- Active --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item item--active"</span>
+            <span class="code--blue">></span>
+            <span>Active</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&lt!-- Default --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item"</span>
+            <span class="code--blue">></span>
+            <span>Tab</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/ul></span> 
+          </p>
+        </div>
+      </section>
+
+      <!-- Vertical List -->
+      <section>
+        <p class="subtitle">Vertical List</p>
+
+        <ul class="list__vertical">
+          <li class="item">Item</li>
+          <li class="item">Item</li>
+          <li class="item item--active">Item</li>
+          <li class="item">Item</li>
+          <li class="item">Item</li>
+        </ul>
+
+        <div class="editor">
+          <p class="code--green">&lt!-- Vertical List --></p>
+          <p> 
+            <span class="code--blue">&ltul</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"list__vertical"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p class="code--green">&nbsp&nbsp&lt!-- Default --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item"</span>
+            <span class="code--blue">></span>
+            <span>Item</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&lt!-- Active --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item item--active"</span>
+            <span class="code--blue">></span>
+            <span>Item</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <br>
+          <p class="code--green">&nbsp&nbsp&lt!-- Default --></p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltli</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"item"</span>
+            <span class="code--blue">></span>
+            <span>Item</span>
+            <span class="code--blue">&lt/li></span>
+          </p>
+          <p>
+            <span class="code--blue">&lt/ul></span> 
+          </p>
+        </div>
+      </section>
+
+      <!-- Card -->
+      <section>
+        <p class="subtitle">Card</p>
+
+        <div class="card">
+          <img class="card-img-top" src="./src/img/banner.png" alt="">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed ultrices erat, non accumsan ex. Suspendisse potenti. Aenean venenatis risus vitae arcu ultrices, id convallis turpis sodales.
+            </p>
+            <button class="button button--success">Button</button>
+          </div>
+        </div>
+
+        <div class="editor">
+          <p class="code--green">&lt!-- Card --></p>
+          <p> 
+            <span class="code--blue">&ltsection</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"card"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltimg</span>
+            <span class="code--red">class=</span>
+            <span class="code--orange">"card-img-top"</span>
+            <span class="code--red">src=</span>
+            <span class="code--orange">"./src/img/banner.png"</span>
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltdiv</span>  
+            <span class="code--red">class=</span>  
+            <span class="code--orange">"card-body"</span>  
+            <span class="code--blue">></span>  
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&lth5</span>
+            <span class="code--red">class=</span> 
+            <span class="code--orange">"card-title"</span> 
+            <span class="code--blue">></span>
+            <span>Card title</span>
+            <span class="code--blue">&lt/h5></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&ltp</span>
+            <span class="code--red">class=</span> 
+            <span class="code--orange">"card-text"</span> 
+            <span class="code--blue">></span>
+          </p>
+          <p>
+            <span>
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbspDescription...
+            </span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&nbsp&nbsp&lt/p></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&lt/div></span>
+          </p>
+          <p>
+            <span class="code--blue">&nbsp&nbsp&ltbutton</span>  
+            <span class="code--red">class=</span>  
+            <span class="code--orange">"button button--success"</span>
+            <span class="code--blue">></span>  
+            <span>Button</span>
             <span class="code--blue">&lt/button></span>  
           </p>
           <p>
